# stm32h743

./: Cargo.toml  memory.x  openocd.cfg
src/: flash.rs  main.rs
