[package]
name = "stm32h743"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "*"
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"
fugit = "0.3.7"
embedded-graphics = "0.7"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
heapless = "0.8.0"
display-interface-spi = "0.4.1"
st7789 = "0.7.0"
# embedded-graphics-core = "0.4.0"
tinybmp = "*"

[dependencies.stm32h7xx-hal]
version = "*"
features = ["stm32h743v", "rt", "xspi"]
# replace the model of your microcontroller here
# and add other required features

# [dependencies.lazy_static]
# version = "1.4.0"
# features = ["spin_no_std"]
[profile.release]
# or "z"
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
